# PyConJP2025

./: .gitignore  CLAUDE.md  Makefile  README.md  api.Dockerfile  batch.Dockerfile  compose.yml  db.Dockerfile  pyproject.toml
.github/workflows/: testing.yaml
docker_env/mysql/: my.cnf
docker_env/mysql/data/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  dac908627ed2.err  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
docker_env/mysql/data/#innodb_redo/: #ib_redo9
docker_env/mysql/data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
docker_env/mysql/data/mysql/: general_log_213.sdi  slow_log_214.sdi
docker_env/mysql/data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  (+98 more)
docker_env/nginx/: nginx.conf
docker_env/uwsgi/: uwsgi_dev.ini
src/: Makefile  config.py  di.py  exception.py  logger.py  pyproject.toml  testing.mk  wsgi.py
src/application/usecase/: user.py  user_dto.py
src/domain/model/: user.py
src/domain/repository/: user.py
src/infra/auth0/: client.py
src/infra/mysql/: db.py
src/presentation/api/: route.py
src/tests/: conftest.py
(+7 files in other folders)
