[project]
name = "PyConJP2025"
version = "0.1.0"
description = "PyConJP2025"
authors = [
    { name = "fujidomoe" }
]
dependencies = [
    "flask==3.1.2",
    "injector==0.22.0",
    "pydantic==2.11.9",
    "sqlalchemy==2.0.43",
    "pymysql==1.1.2",
    "types-PyMySQL==1.1.0.20250916",
    "types-six==1.16.21.20241009",
    "six==1.17.0",
    "python-jose==3.5.0",
]
readme = "README.md"
requires-python = ">= 3.13.3"

[tool.uv]
dev-dependencies = [
    "pytest==8.4.2",
    "ipython==9.5.0",
    "mypy==1.18.2",
    "ruff==0.13.1",
]

[tool.hatch.metadata]
allow-direct-references = true

# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 150
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
